syntax = "proto3";

package proto;

message DispatcherCommandRequest {
  string OP = 1;
  string MerchantID = 2;
  string SenderID = 3;
  string SenderFirstName = 4;
  string SenderLastName = 5;
  string TargetID = 6;
  bytes Data = 7;
}

message DispatcherCommandReply {
  string OP = 1;
  bytes Data = 2;
}


// The dispatcher service definition.
service DispatcherService {
  // handle a command
  rpc HandleCommand (DispatcherCommandRequest) returns (DispatcherCommandReply) {}
}

