syntax = "proto3";


package proto;

message SendCommandRequest {
  repeated Command Commands = 1;
}

message Command {
    string Type = 1;
    string TargetID = 2;
    bytes Data = 3;
}

message EmptyRequest {}

message EmptyReply {}

// The gateway service definition.
service GatewayService {
  rpc SendCommand (SendCommandRequest) returns (EmptyReply) {}
}